# rust-ntlm

./: Cargo.toml  rustfmt.toml
examples/: http_client.rs  http_server.rs  ntlm_decode.rs
src/: auth.rs  client.rs  errors.rs  http.rs  lib.rs  proto.rs  server.rs
