[package]
name = "ntlm"
version = "0.1.0"
authors = ["Flier Lu <flier.lu@gmail.com>"]

[features]
default = ["hyper", "serde", "serde_derive"]

[dependencies]
failure = "0.1"
byteorder = "1.2"
bytes = "0.4"
bitflags = "1.0"
itertools = "0.7"
generic-array = "0.9"
encoding = "0.2"
log = "0.4"
num = "0.1"
num-derive= "0.1"
digest = "0.7"
md4 = "0.7"
des = "0.1"
rust-crypto = "0.2"
base64 = "0.9"
rand = "0.5"
time = "0.1"
hostname = "0.1"

serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }
hyper = { version = "0.11", optional = true }
clippy = { version = "*", optional = true }

[dependencies.nom]
version = "3.2"
features = ["verbose-errors"]

[dev-dependencies]
pretty_env_logger = "0.2"
lazy_static = "1.0"
futures = "0.1"
tokio-core = "0.1"
getopts = "0.2"
matches = "0.1"
hex = "0.3"
hexplay = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.7"
